--- a/analysis/soc_ref_category_paper/soc_ref_category_bib.bib
+++ b/analysis/soc_ref_category_paper/soc_ref_category_bib.bib
@@ -648,4 +648,27 @@
   publisher = {Wiley Online Library},
 }
 
+@Article{chouinard2007children,
+  author    = {Chouinard, Michelle M and Harris, Paul L and Maratsos, Michael P},
+  title     = {Children's questions: A mechanism for cognitive development},
+  journal   = {Monographs of the Society for Research in Child Development},
+  year      = {2007},
+  pages     = {i--129},
+  publisher = {JSTOR},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
+@Manual{R-broman,
+  title = {broman: Karl Broman's R Code},
+  author = {Karl W Broman and with contributions from Aimee Teo Broman},
+  year = {2017},
+  note = {R package version 0.67-4},
+  url = {https://CRAN.R-project.org/package=broman},
+}
+@Manual{R-xtable,
+  title = {xtable: Export Tables to LaTeX or HTML},
+  author = {David B. Dahl},
+  year = {2016},
+  note = {R package version 1.8-2},
+  url = {https://CRAN.R-project.org/package=xtable},
+}
