--- a/analysis/soc_ref_category_paper/soc_ref_category_paper.tex
+++ b/analysis/soc_ref_category_paper/soc_ref_category_paper.tex
@@ -594,7 +594,7 @@ viewing a screen image of the same interaction (Risko, Laidlaw, Freeth,
 Foulsham, \& Kingstone, 2012). One study in particular suggests that an
 interaction with a live conversant draws more social gaze than a video
 display of a similar interaction, simply because a live conversation
-creates the potential for social interaction in ways taht videos cannot
+creates the potential for social interaction in ways that videos cannot
 (K. E. Laidlaw, Foulsham, Kuhn, \& Kingstone, 2011). A separate line of
 research also shows that children learn more effectively when
 interacting with a social partner whose actions are contingent on the
